altered z indexes for correct overlaping of close button, menu icon and modale window.

--- a/modal.css
+++ b/modal.css
@@ -114,7 +114,7 @@ img {
     top: 0;
     right: 0;
     left: 0;
-    z-index: 99;
+    z-index: 2;
     /*padding-top: 3vh;*/
     margin-top: 9vh;
   }
@@ -144,7 +144,7 @@ img {
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 99;
+    z-index: 2;
     margin-top: 9vh;
     background-color: rgba(255, 255, 255, 0.99);
   }
@@ -254,7 +254,7 @@ main {
 .bground {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   left: 0;
   top: 0;
   height: 100%;
@@ -409,7 +409,7 @@ input[data-error]::after {
   opacity: 1;
   cursor: pointer;
   transform: scale(0.7);
-  z-index:2;
+  z-index:4;
 }
 .close:before,
 .close:after {
